$NetBSD: CHANGES,v 1.4320 2004/01/01 23:36:42 agc Exp $

Changes to the packages collection and infrastructure in 2004:

	Updated hatari to 0.45 [cjep 2004-01-01]
	Added NeoPop-SDL-0.1 [wiz 2004-01-01]
	Added dccserver-0.4 [wiz 2004-01-01]
	Updated vsftpd to 1.2.1 [salo 2004-01-01]
	Updated TeXmacs to 1.0.2.11 [recht 2004-01-01]
	Updated p5-DBD-XBase to 0.241 [salo 2004-01-01]
	Updated pclock to 0.13.1nb1 [salo 2004-01-01]
	Updated gap to 4.3.5 [cjep 2004-01-01]
	Updated moz-mplayer to 1.0 [salo 2004-01-01]
	Added awhois-1.61 [cjep 2004-01-01]
	Updated xfstt to 1.6 [salo 2004-01-01]
	Added sylpheed-claws-dillo-viewer-0.9.7 [cube 2004-01-01]
	Added sylpheed-claws-image-viewer-0.9.7 [cube 2004-01-01]
	Added sylpheed-claws-trayicon-0.9.7 [cube 2004-01-01]
	Updated audit-packages to 1.28 [agc 2004-01-01]