@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4320 2004/01/01 23:36:42 agc Exp $
+$NetBSD: CHANGES,v 1.4321 2004/01/02 01:19:13 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -17,3 +17,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added sylpheed-claws-image-viewer-0.9.7 [cube 2004-01-01]
 	Added sylpheed-claws-trayicon-0.9.7 [cube 2004-01-01]
 	Updated audit-packages to 1.28 [agc 2004-01-01]
+	Updated nicotine to 1.0.6 [hubertf 2004-01-02]
